day3starttwo. added unit tests for methods

--- a/AdventOfCode2017Tests/AdventOfCodeTests.csproj
+++ b/AdventOfCode2017Tests/AdventOfCodeTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AdventOfCode2017\AdventOfCode2017.csproj">
+      <Project>{57cbabb4-0c59-41c7-abbc-733620068bcb}</Project>
+      <Name>AdventOfCode2017</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
