day11 starone finished baad code need parametrize

--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Day1.cs" />
     <Compile Include="Day10.cs" />
+    <Compile Include="Day11.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day3.cs" />
     <Compile Include="Day4.cs" />
