--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Day10.cs" />
     <Compile Include="Day11.cs" />
     <Compile Include="Day12.cs" />
+    <Compile Include="Day13.cs" />
     <Compile Include="Day18.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day3.cs" />
