--- a/AdventOfCode2017/AdventOfCode2017.csproj
+++ b/AdventOfCode2017/AdventOfCode2017.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Day11.cs" />
     <Compile Include="Day12.cs" />
     <Compile Include="Day13.cs" />
+    <Compile Include="Day14.cs" />
     <Compile Include="Day18.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day3.cs" />
