--- a/AdventOfCode2017Tests/AdventOfCodeTests.csproj
+++ b/AdventOfCode2017Tests/AdventOfCodeTests.csproj
@@ -56,7 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\AdventOfCode.Shared\AdventOfCode.Shared.csproj">
+    <ProjectReference Include="..\AdventOfCode.Shared\AdventOfCode.Shared.csproj">
       <Project>{854f1f58-1fcd-4537-9ce6-ec3e36b9b93f}</Project>
       <Name>AdventOfCode.Shared</Name>
     </ProjectReference>
