day4 some error in start two todo in future

--- a/AdventOfCode.Shared/AdventOfCode.Shared.csproj
+++ b/AdventOfCode.Shared/AdventOfCode.Shared.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="IDayX.cs" />
     <Compile Include="DefaultInputProvider.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="IinputProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
