--- a/AdventOfCode2020/AdventOfCode2020.csproj
+++ b/AdventOfCode2020/AdventOfCode2020.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day10.cs" />
     <Compile Include="Day9.cs" />
     <Compile Include="Day8.cs" />
     <Compile Include="Day7.cs" />
@@ -59,6 +60,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="inputs_2020\Day10.txt" />
     <Content Include="inputs_2020\Day9.txt" />
     <Content Include="inputs_2020\Day8.txt" />
     <Content Include="inputs_2020\Day7.txt" />
