--- a/AdventOfCodeRunner.csproj
+++ b/AdventOfCodeRunner.csproj
@@ -58,6 +58,10 @@
       <Project>{57cbabb4-0c59-41c7-abbc-733620068bcb}</Project>
       <Name>AdventOfCode2017</Name>
     </ProjectReference>
+    <ProjectReference Include="AdventOfCode2019\AdventOfCode2019.csproj">
+      <Project>{f0169fc2-8673-4aea-9832-4f61cbe86dbd}</Project>
+      <Name>AdventOfCode2019</Name>
+    </ProjectReference>
     <ProjectReference Include="AdventOfCode2020\AdventOfCode2020.csproj">
       <Project>{1af1296b-847f-4032-b6ec-33883451ffc8}</Project>
       <Name>AdventOfCode2020</Name>
