--- a/AdventOfCode.Shared/AdventOfCode.Shared.csproj
+++ b/AdventOfCode.Shared/AdventOfCode.Shared.csproj
@@ -43,9 +43,8 @@
   <ItemGroup>
     <Compile Include="Day66.cs" />
     <Compile Include="IDayX.cs" />
-    <Compile Include="DefaultInputProvider.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="IinputProvider.cs" />
+    <Compile Include="Inputs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
