day 11 start two

--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day11.cs" />
     <Compile Include="Day10.cs" />
     <Compile Include="Day9.cs" />
     <Compile Include="Day8.cs" />
@@ -60,6 +61,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="inputs_2022\Day11.txt" />
     <Content Include="inputs_2022\Day10.txt" />
     <Content Include="inputs_2022\Day9.txt" />
     <Content Include="inputs_2022\Day8.txt" />
@@ -70,6 +72,9 @@
     <Content Include="inputs_2022\Day3.txt" />
     <Content Include="inputs_2022\Day2.txt" />
     <Content Include="inputs_2022\Day1.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
