--- a/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test2020.cs" />
+    <Compile Include="Test2023.cs" />
     <Compile Include="Test2022.cs" />
     <Compile Include="Test2021.cs" />
     <Compile Include="Test2017.cs" />
@@ -78,6 +79,10 @@
     <ProjectReference Include="..\AdventOfCode2022\AdventOfCode2022.csproj">
       <Project>{105fe577-4877-4787-bf22-b5f26961c1ae}</Project>
       <Name>AdventOfCode2022</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AdventOfCode2023\AdventOfCode2023.csproj">
+      <Project>{6bdad498-2fa9-42af-b0db-41534555b913}</Project>
+      <Name>AdventOfCode2023</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
