--- a/AdventOfCode.Shared/AdventOfCode.Shared.csproj
+++ b/AdventOfCode.Shared/AdventOfCode.Shared.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Day66.cs" />
     <Compile Include="IDayX.cs" />
+    <Compile Include="CommonHelpers.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="Inputs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
