--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day10.cs" />
     <Compile Include="Day9.cs" />
     <Compile Include="Day8.cs" />
     <Compile Include="Day7.cs" />
@@ -65,6 +66,7 @@
     <Content Include="inputs_2023\Day7_edgecases.txt" />
     <Content Include="inputs_2023\Day7.txt" />
     <Content Include="inputs_2023\Day8.txt" />
+    <Content Include="inputs_2023\Day10.txt" />
     <Content Include="inputs_2023\Day9.txt" />
   </ItemGroup>
   <ItemGroup>
