day 16 star one not bad

--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day16.cs" />
     <Compile Include="Day11.cs" />
     <Compile Include="Day10.cs" />
     <Compile Include="Day9.cs" />
@@ -56,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="inputs_2023\Day1.txt" />
+    <Content Include="inputs_2023\Day16.txt" />
     <Content Include="inputs_2023\Day11.txt" />
     <Content Include="inputs_2023\Day2.txt" />
     <Content Include="inputs_2023\Day3_aoctestcase.txt" />
