--- a/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/AdventOfCode2023/AdventOfCode2023.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day18.cs" />
     <Compile Include="Day16.cs" />
     <Compile Include="Day11.cs" />
     <Compile Include="Day10.cs" />
@@ -59,6 +60,7 @@
     <Content Include="inputs_2023\Day1.txt" />
     <Content Include="inputs_2023\Day16.txt" />
     <Content Include="inputs_2023\Day11.txt" />
+    <Content Include="inputs_2023\Day18.txt" />
     <Content Include="inputs_2023\Day2.txt" />
     <Content Include="inputs_2023\Day3_aoctestcase.txt" />
     <Content Include="inputs_2023\Day3_sometestcase.txt" />
