--- a/AdventOfCodeTests/AdventOfCodeTests.csproj
+++ b/AdventOfCodeTests/AdventOfCodeTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test2020.cs" />
+    <Compile Include="Test2024.cs" />
     <Compile Include="Test2023.cs" />
     <Compile Include="Test2022.cs" />
     <Compile Include="Test2021.cs" />
@@ -83,6 +84,10 @@
     <ProjectReference Include="..\AdventOfCode2023\AdventOfCode2023.csproj">
       <Project>{6bdad498-2fa9-42af-b0db-41534555b913}</Project>
       <Name>AdventOfCode2023</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AdventOfCode2024\AdventOfCode2024.csproj">
+      <Project>{b8e6c492-0d51-4a19-ac91-eb52243f67d6}</Project>
+      <Name>AdventOfCode2024</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
