--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day4.cs" />
     <Compile Include="Day3.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day1.cs" />
@@ -53,6 +55,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="inputs_2024\Day4.txt" />
     <Content Include="inputs_2024\Day3.txt" />
     <Content Include="inputs_2024\Day2.txt" />
     <Content Include="inputs_2024\Day1.txt" />
